modulo-03-kubernetes/exercises/solucion/02-distributed/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ejercicio3
  labels:
    name: ejercicio3
