modulo-03-kubernetes/exercises/solucion/02-distributed/02-deploymentfront.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-front
  namespace: ejercicio3
spec:
  selector:
    matchLabels:
      app: todo-front
  template:
    metadata:
      labels:
        app: todo-front
    spec:
      containers:
      - name: todo-front
        image: demcorp/lc-todo-front-distributed
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
