modulo-03-kubernetes/exercises/solucion/02-distributed/05-deploymentapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
  namespace: ejercicio3
spec:
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
      - name: todo-api
        image: demcorp/lc-todo-api-distributed
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
