modulo-03-kubernetes/exercises/solucion/02-distributed/03-servicefront.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-todo-front
  namespace: ejercicio3
spec:
  type: ClusterIP
  selector:
    app: todo-front
  ports:
  - port: 80
    targetPort: 80
