modulo-03-kubernetes/exercises/solucion/02-distributed/06-serviceapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-todo-api
  namespace: ejercicio3
spec:
  type: ClusterIP
  selector:
    app: todo-api
  ports:
  - port: 3000
    targetPort: 3000
